# sphinx-mkdocs-theme

./: .isort.cfg  README.md  noxfile.py  pyproject.toml
src/sphinx_mkdocs_theme/: __init__.py  __original__.py  bridge.py  builder.py  model.py  theme.conf  translator.py
