[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sphinx_mkdocs_theme"
dist-name = "sphinx-mkdocs-theme"
author = "Pradyun Gedam"
author-email = "mail@pradyunsg.me"
home-page = "https://github.com/pradyunsg/sphinx-mkdocs-theme"
description-file = "README.md"
requires-python = ">=3.8"
requires = ["sphinx", "mkdocs", "beautifulsoup4"]

[tool.flit.metadata.requires-extra]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
doc = []
